<resources>
    <string name="app_name">OVO SOUND VINYLS</string>
    <string name="amounthint">Amount</string>
    <string name="expensehint">Expense</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="userNameHint"><font size="14">Username</font></string>
    <string name="passwordHint"><font size="14">Password</font></string>
    <string name="NameHint"><font size="14">Name</font></string>
    <string name="btnLogin">LOGIN</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="txtHeader">OVO SOUND VINYLS</string>
    <string name="btnregis">REGISTER</string>
    <string name="btnback">BACK</string>
    <string name="btnconfirm">CONFIRM</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Confirm">Confirm</string>
    <string name="show">Show Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">Other</string>
    <string name="request">Requesting Data...</string>
    <string name="favorite">Favorite</string>
    <string name="next">Next</string>
    <string name="addtocart">Add To Cart</string>
    <string name="checkout">Check Out</string>
    <string name="mainpage">Main Page</string>
    <string name="favoritelist">Favorites</string>
    <string name="logout">Log Out</string>
    <string name="Select">Select</string>
    <string name="name">Name:</string>
    <string name="song">Song Title:</string>
    <string name="price">Price:</string>
    <string name="viewlyrics">View Lyrics</string>
    <string name="lyrics">View Lyrics</string>
    <string name="Confirmsong">Confirm Song</string>
    <string name="demo">Demographic</string>
    <string name="about">About Us</string>

    <string-array name="expense_types">
        <item>Choose Expense Type...</item>
        <item>Travel</item>
        <item>Mobile</item>
        <item>Food</item>
    </string-array>
    <string name="title_activity_demo">Map</string>
    <string name="aboutus">Welcome to OVO SOUND VINYLS, your number one source for all things music. We are dedicated to providing you the very best of music, with an emphasis on the customer.   Founded in 2020 by Enis Kovacevic, OVO SOUND VINYLS has come a long way from its beginnings in Fargo, ND. When Enis Kovacevic first started out, his passion for The People drove him to start his own business.   We hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don\'t hesitate to contact us.   Sincerely,  Enis Kovacevic</string>
    <string name="feedback">FeedBack</string>
    <string name="enter">Enter some feedback:</string>
    <string name="send">Send</string>
</resources>