<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/txtHeader"
            android:textColor="@color/textcolor"
            android:textSize="19sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/owl"
            android:layout_width="352dp"
            android:layout_height="143dp"
            android:src="@drawable/ovo" />
    </TableRow>


    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margtop">

        <TextView
            android:id="@+id/Name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsizereg"
            android:text="@string/NameHint"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:textColor="@color/textcolor"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Name2"
            android:layout_width="@dimen/userime"
            android:textSize="@dimen/textsizereg"
            android:layout_height="@dimen/userime2"
            android:background="@color/userTextView_Color"
            android:hint="@string/NameHint" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/Username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsizereg"
            android:text="@string/Username"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:textColor="@color/textcolor"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Username2"
            android:layout_width="@dimen/userime"
            android:layout_height="@dimen/userime2"
            android:textSize="@dimen/textsizereg"
            android:background="@color/userTextView_Color"
            android:hint="@string/userNameHint" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/Password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsizereg"
            android:text="@string/Password"
            android:paddingLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/textcolor"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Password2"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:textSize="@dimen/textsizereg"
            android:layout_marginLeft="1dp"
            android:background="@color/PassTextView_Color"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/Confirm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsizereg"
            android:text="@string/Confirm"
            android:paddingLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/textcolor"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Confirm2"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:textSize="@dimen/textsizereg"
            android:layout_marginLeft="1dp"
            android:background="@color/PassTextView_Color"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <CheckBox
            android:text="@string/show"
            android:textSize="@dimen/textsizereg"
            android:id="@+id/pokazi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor">
        </CheckBox>
    </TableRow>

    <RadioGroup
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup">
        <RadioButton android:id="@+id/ma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/textsizereg"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            />
        <RadioButton android:id="@+id/fe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:paddingLeft="10dp"
            android:textSize="@dimen/textsizereg"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            />
        <RadioButton android:id="@+id/ot"
            android:layout_width="wrap_content"
            android:textSize="@dimen/textsizereg"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textColor="@color/textcolor"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:text="@string/btnconfirm"
       />

    <Button
        android:id="@+id/signinBtn"
        android:text="@string/btnregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/back"
        android:text="@string/btnback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary" />


</TableLayout>